<resources>
    <string name="app_name">Konversi Satuan Berat</string>
    <string name="satuanberat_intro">Konversi satuan berat adalah proses mengubah nilai berat dari suatu satuan ke satuan berat lainnya.</string>
    <string name="from_satuan">Satuan berat (kg): </string>
    <string name="to_satuan">Ke satuan berat</string>
    <string name="jenis_kelamin">Jenis kelamin</string>
    <string name="miligram">Miligram</string>
    <string name="gram">Gram</string>
    <string name="lbs">Pounds</string>
    <string name="hitung">Hitung</string>
    <string name="hasil_konversi">Hasil: %1$.2f</string>
    <string name="berat_invalid">Berat tidak boleh kosong.</string>
    <string name="tinggi_invalid">Tinggi tidak boleh kosong.</string>
    <string name="konversi_invalid">Pilih jenis berat.</string>

</resources>
